@@ -20,7 +20,8 @@ $Id: pythondirector.dtd,v 1.4 2003/10/09 08:20:59 anthonybaxter Exp $
 
 <!ELEMENT host>
 <!ATTLIST host name CDATA #REQUIRED
-                 ip CDATA #REQUIRED>
+                 ip CDATA #REQUIRED
+                 weight CDATA>
 
 <!ELEMENT enable EMPTY>
 <!ATTLIST enable group CDATA #REQUIRED>
